syntax = "proto3";

import "taskSet.proto";

package opennms.taskset.service;
option java_multiple_files = true;
option java_package = "org.opennms.taskset.service.contract";

service TaskSetService {
  rpc updateTasks(UpdateTasksRequest) returns (UpdateTasksResponse) {}

}

//
// PUBLISH TASK SET (TODO - remove)
//
message PublishTaskSetRequest {
  string location = 1;
  opennms.taskset.TaskSet taskSet = 2;
}

message PublishTaskSetResponse {
}

message UpdateTasksRequestList {
  repeated UpdateTasksRequest updateTasksRequest = 1;
}

//
// UPDATE TASKS
//
message UpdateTasksRequest {
  string tenantId = 1;
  string location = 2;
  repeated UpdateSingleTaskOp update = 3;
}

message UpdateTasksResponse {
  int32 numNew = 1;
  int32 numRemoved = 2;
  int32 numReplaced = 3;
}

message UpdateSingleTaskOp {
  oneof op {
      AddSingleTaskOp addTask = 1;
      RemoveSingleTaskOp removeTask = 2;
  }
}

message AddSingleTaskOp {
  TaskDefinition taskDefinition = 1;
}

message RemoveSingleTaskOp {
  string taskId = 1;
}
